# nanobind-poetry-demo

./: README.md  pyproject.toml
hello/: CMakeLists.txt  __init__.py  invoke_it.py  pyproject.toml
hello/src/: hello_ext.cpp
nanobind_poetry_demo/: __init__.py  say_hi.py
src/hello/: __init__.py
tests/: test_hi.py
