[tool.poetry]
name = "nanobind-poetry-demo"
version = "0.1.0"
description = ""
authors = ["Mark Frymire <mark.frymire@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
hello = {path = "./hello", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
