[tool.poetry]
name = "nanobind-poetry-demo"
version = "0.1.0"
description = ""
authors = ["Mark Frymire <mark.frymire@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hello = {path = "./hello", develop = true}
numpy = "1.26.4"
pytest = "8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
