[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "hello"
version = "0.0.1"
description = "Build a wheel that lets you call a C++ hello-world from python"
readme = "../README.md"
requires-python = ">=3.10"
authors = [ { name = "Mark Frymire", email = "mark.frymire@icloud.com" }]

[tool.scikit-build]
minimum-version = "0.4"  # Protect the configuration against future changes in scikit-build-core
build-dir = "../build/{wheel_tag}"  # Setuptools-style build caching in a local directory
wheel.py-api = "cp312"  # Build stable ABI wheels for CPython 3.12+
